# watchbot

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: actions.yml
src/watch_bot/: __init__.py  _bot.py  _dialog.py  _response.py  prompt.j2  prompt.template
test/: __init__.py  test_bot.py  test_dialog.py  test_response.py
test/data/: __init__.py  hack_prompt.txt  hack_prompt_answer.txt  saruman_hack_prompt_4.txt  saruman_hack_prompt_answer_1.txt  saruman_hack_prompt_answer_2.txt  saruman_pre_prompt.txt  saruman_pre_prompt_1.txt  saruman_pre_prompt_2.txt  saruman_pre_prompt_3.txt  saruman_pre_prompt_4.txt
test/prompt_hacks/illegal/: test_bot.py
test/prompt_hacks/illegal/data/: __init__.py
test/prompt_hacks/secret_password/saruman/: test_bot.py
test/prompt_hacks/secret_password/saruman/data/: __init__.py  leaked_eiqu6gah_password_via_dict.txt  leaked_hints_parmigiano_password_via_poetry.txt  leaked_parmigiano_password_via_pre_dialog.txt  leaked_parmigiano_password_via_quaternion.txt  poetry_attack_prompt.txt  pre_dialog_attack_prompt.txt  pre_prompt.j2  quaternion_attack_prompt.txt  resist_quaternion_attack.txt  saruman_hack_prompt_answer_3.txt  saruman_pre_prompt_2.txt
